--- a/vue-test/public/index.html
+++ b/vue-test/public/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this application doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>很抱歉，如果没有启用JavaScript，此应用将无法正常运行。请启用JavaScript然后继续。</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
